fixed book details and reading session mobile responsiveness

--- a/my-app/src/allbooks.css
+++ b/my-app/src/allbooks.css
@@ -42,7 +42,6 @@
     overflow: hidden;  /* Prevent content overflow */
     word-wrap: break-word; /* Ensure text stays inside */
     position: relative;
-    z-index: -1;
     margin: 0 auto; /* Center the card */
 }
 
@@ -184,7 +183,7 @@
     position: absolute;
     top: 15px;
     right: 15px;
-    z-index: 100;
+    z-index: 1;
     cursor: pointer;
 }
 
@@ -193,7 +192,7 @@
     position: absolute;
     top: 15px;
     right: 15px;
-    z-index: 100;
+    z-index: 1;
     cursor: pointer;
 }
 
@@ -206,7 +205,7 @@
     position: absolute;
     top: 45px; 
     right: 15px;
-    z-index: 100;
+    z-index: 1;
     cursor: pointer;
 }
 
